Fix crash when installing packages for within check installation dialog.

BUG: 433040
BUG: 441763